--- a/web/WEB-INF/classes/xava.properties
+++ b/web/WEB-INF/classes/xava.properties
@@ -12,8 +12,8 @@ failOnAnnotationMisuse=true
 emailAsUserNameInPortal=false
 buttonsForNoImageActions=false
 toUpperForStringArgumentsInConditions=true
-showFilterByDefaultInList=true
-showFilterByDefaultInCollections=true
+showFilterByDefaultInList=false
+showFilterByDefaultInCollections=false
 mapFacadeAutoCommit=false
 #portletLocales=en,es,ca,fr
 
@@ -25,8 +25,8 @@ mapFacadeAutoCommit=false
 #styleCSS=liferay51/css/everything_unpacked.css
 
 # Liferay 4.3/4.4/5.0: uncomment the next line for use this nice and slow style
-#styleClass=org.openxava.web.style.Liferay43Style
-#styleCSS=liferay43/css/everything_unpacked.css
+styleClass=org.openxava.web.style.Liferay43Style
+styleCSS=liferay43/css/everything_unpacked.css
 
 # Classic style: uncomment the next line for use the old OX style 
 #styleClass=org.openxava.web.style.Style
