--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -19,6 +19,58 @@ If you want to add filters add them in filters.xml file in WEB-INF.
 	
 	 
 	
+		<filter>
+		<filter-name>naviox</filter-name>
+		<filter-class>com.openxava.naviox.web.NaviOXFilter</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>naviox</filter-name>
+		<url-pattern>/index.jsp</url-pattern>
+	</filter-mapping>		
+	<filter-mapping>
+		<filter-name>naviox</filter-name>
+		<url-pattern>/naviox/index.jsp</url-pattern>
+	</filter-mapping>	
+	<filter-mapping>
+		<filter-name>naviox</filter-name>
+		<url-pattern>/xava/module.jsp</url-pattern>
+	</filter-mapping>
+	<filter-mapping>
+		<filter-name>naviox</filter-name>
+		<servlet-name>naviox</servlet-name>
+	</filter-mapping>
+	<filter-mapping>
+		<filter-name>naviox</filter-name>
+		<servlet-name>module</servlet-name>
+	</filter-mapping>
+	<filter-mapping>
+		<filter-name>naviox</filter-name>
+		<servlet-name>images</servlet-name>
+	</filter-mapping>
+	<filter-mapping>
+		<filter-name>naviox</filter-name>
+		<servlet-name>gallery</servlet-name>
+	</filter-mapping>
+	<filter-mapping>
+		<filter-name>naviox</filter-name>
+		<servlet-name>jasperReport</servlet-name>
+	</filter-mapping>
+	<filter-mapping>
+		<filter-name>naviox</filter-name>
+		<servlet-name>generatePDFReport</servlet-name>
+	</filter-mapping>
+	<filter-mapping>
+		<filter-name>naviox</filter-name>
+		<servlet-name>generateExcelReport</servlet-name>
+	</filter-mapping>
+	<filter-mapping>
+		<filter-name>naviox</filter-name>
+		<servlet-name>generateCustomReport</servlet-name>
+	</filter-mapping>
+	<filter-mapping>
+		<filter-name>naviox</filter-name>
+		<servlet-name>dwrInvoker</servlet-name>
+	</filter-mapping>
 	
 	
 	<servlet>
@@ -67,7 +119,33 @@ If you want to add filters add them in filters.xml file in WEB-INF.
 		<load-on-startup>12</load-on-startup>
 	</servlet>	
 		
+		<servlet>
+		<servlet-name>naviox</servlet-name>
+		<servlet-class>com.openxava.naviox.web.NaviOXServlet</servlet-class>
+	</servlet>
 	
+	<servlet>
+		<servlet-name>dwrNaviOXInvoker</servlet-name>
+		<servlet-class>uk.ltd.getahead.dwr.DWRServlet</servlet-class>
+		<init-param>
+			<param-name>config-naviox</param-name>
+			<param-value>WEB-INF/naviox-dwr.xml</param-value>
+		</init-param>
+		<init-param> 
+			<param-name>crossDomainSessionSecurity</param-name> 
+			<param-value>false</param-value> 
+		</init-param> 				
+	</servlet>
+		
+	<servlet-mapping>
+		<servlet-name>naviox</servlet-name>
+		<url-pattern>/m/*</url-pattern>
+	</servlet-mapping>		
+
+	<servlet-mapping>
+		<servlet-name>dwrNaviOXInvoker</servlet-name>
+		<url-pattern>/naviox/dwr/*</url-pattern>
+	</servlet-mapping>
 	
 	<servlet-mapping>
 		<servlet-name>module</servlet-name>
