--- a/web/WEB-INF/classes/.gitignore
+++ b/web/WEB-INF/classes/.gitignore
@@ -17,3 +17,9 @@
 /com
 /naviox-users.properties
 /naviox.properties
+/Aspergus-labels_fr.properties
+/Aspergus-messages_fr.properties
+/Labels_en.properties
+/Labels_fr.properties
+/Messages_en.properties
+/Messages_fr.properties
